--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS=$(curl --insecure  https://kvdb.io/E1DRbP8ms9BrSdnY9DqVhg/migration_<< parameters.Workflow_ID >>)
+            SUCCESS=$(curl --insecure  https://kvdb.io/2Lp4N99xcAqB39LQSsf9pR/migration_<< parameters.Workflow_ID >>)
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -294,7 +294,7 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/E1DRbP8ms9BrSdnY9DqVhg/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl https://kvdb.io/2Lp4N99xcAqB39LQSsf9pR/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
               echo "No migrations are pending" 
             fi
@@ -450,7 +450,7 @@ jobs:
                       list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                       --no-paginate --output text)
             echo "Old Wokflow ID: ${OLD_WORKFLOW_ID}"
-            curl https://kvdb.io/E1DRbP8ms9BrSdnY9DqVhg/old_workflow_id -d "${OLD_WORKFLOW_ID}"  
+            curl https://kvdb.io/2Lp4N99xcAqB39LQSsf9pR/old_workflow_id -d "${OLD_WORKFLOW_ID}"  
 
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
@@ -458,8 +458,8 @@ jobs:
               --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags project=udapeople
 
-              echo Old Wokflow ID: "${OLD_WORKFLOW_ID}"
-              echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+            echo "Old Wokflow ID: ${OLD_WORKFLOW_ID}"
+            echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
 
       # Here's where you will add some code to rollback on failure
       - destroy-environment
@@ -476,7 +476,7 @@ jobs:
             name: Remove old stacks and files
             command: |
               
-              OLD_WORKFLOW_ID=$(curl --insecure  https://kvdb.io/E1DRbP8ms9BrSdnY9DqVhg/old_workflow_id)
+              OLD_WORKFLOW_ID=$(curl --insecure  https://kvdb.io/2Lp4N99xcAqB39LQSsf9pR/old_workflow_id)
               echo OLD_WORKFLOW_ID: "${OLD_WORKFLOW_ID:10:16}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
 
@@ -523,7 +523,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
