--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -441,24 +441,43 @@ jobs:
       - checkout
       - install_awscli
       - install_nodejs
-            
+
       - run:
-          name: Update cloudfront distribution
+          name: Save Old Workflow ID to kvdb.io
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation \
                       list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                       --no-paginate --output text)
-            echo "Old Wokflow ID: ${OLD_WORKFLOW_ID}"
-            curl https://kvdb.io/2Lp4N99xcAqB39LQSsf9pR/old_workflow_id -d "${OLD_WORKFLOW_ID}"  
-
+            echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
+            curl https://kvdb.io/${2Lp4N99xcAqB39LQSsf9pR}/old_workflow_id -d "${OLD_WORKFLOW_ID}"
+      - run:
+          name: Update cloudfront distribution
+          command: |
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
-              --stack-name InitialStack \
-              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --tags project=udapeople
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+              --stack-name InitialStack 
 
-            echo "Old Wokflow ID: ${OLD_WORKFLOW_ID}"
-            echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+              echo "Old Wokflow ID: ${OLD_WORKFLOW_ID}"
+              echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+
+      # - run:
+      #     name: Update cloudfront distribution
+      #     command: |
+      #       export OLD_WORKFLOW_ID=$(aws cloudformation \
+      #                 list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+      #                 --no-paginate --output text)
+      #       echo "Old Wokflow ID: ${OLD_WORKFLOW_ID}"
+      #       curl https://kvdb.io/2Lp4N99xcAqB39LQSsf9pR/old_workflow_id -d "${OLD_WORKFLOW_ID}"  
+
+      #       aws cloudformation deploy \
+      #         --template-file .circleci/files/cloudfront.yml \
+      #         --stack-name InitialStack \
+      #         --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+      #         --tags project=udapeople
+
+      #       echo "Old Wokflow ID: ${OLD_WORKFLOW_ID}"
+      #       echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
 
       - destroy-environment
 
