--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -449,7 +449,7 @@ jobs:
                       list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                       --no-paginate --output text)
             echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
-            curl https://kvdb.io/${2Lp4N99xcAqB39LQSsf9pR}/old_workflow_id -d "${OLD_WORKFLOW_ID}"
+            curl https://kvdb.io/2Lp4N99xcAqB39LQSsf9pR/old_workflow_id -d "${OLD_WORKFLOW_ID}"
       - run:
           name: Update cloudfront distribution
           command: |
